As been said in November

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,12 @@ spring.datasource.username=root
 spring.datasource.password=password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql = true
+spring.mail.username = "clinic@gmail.com"
+spring.mail.password = "samplePassword"
+spring.mail.properties.mail.smtp.auth=true
+hibernate.hbm2ddl.auto="create-drop"
+# App Properties
+app.jwtSecret= securityKey
+app.jwtExpirationMs= 36000000 
+spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL5InnoDBDialect
+
