--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,11 +4,22 @@ spring.datasource.username=root
 spring.datasource.password=password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql = true
-spring.mail.username = "clinic@gmail.com"
-spring.mail.password = "samplePassword"
-spring.mail.properties.mail.smtp.auth=true
 hibernate.hbm2ddl.auto="create-drop"
 app.jwtSecret= securityKey
 app.jwtExpirationMs= 360000000
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL5InnoDBDialect
+debug=true
+spring.mail.host=smtp.gmail.com
+spring.mail.port=25
+spring.mail.username=przychodniahealthcare@gmail.com
+spring.mail.password=mojehaslo1
+# Other properties
+spring.mail.properties.mail.debug=true
+spring.mail.properties.mail.transport.protocol=smtp
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.connectiontimeout=100000
+spring.mail.properties.mail.smtp.timeout=100000
+spring.mail.properties.mail.smtp.writetimeout=100000
+spring.mail.properties.mail.smtp.ssl.trust= smtp.gmail.com
+spring.mail.properties.mail.smtp.starttls.enable=true
 
