added smsReminders, removed redundant code

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,14 +6,13 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql = true
 hibernate.hbm2ddl.auto="create-drop"
 app.jwtSecret= securityKey
-app.jwtExpirationMs= 360000000
+app.jwtExpirationMs= 360000
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL5InnoDBDialect
 debug=true
 spring.mail.host=smtp.gmail.com
 spring.mail.port=25
 spring.mail.username=przychodniahealthcare@gmail.com
 spring.mail.password=mojehaslo1
-# Other properties
 spring.mail.properties.mail.debug=true
 spring.mail.properties.mail.transport.protocol=smtp
 spring.mail.properties.mail.smtp.auth=true
