--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,8 +11,8 @@ spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL5InnoDBDiale
 debug=true
 spring.mail.host=smtp.gmail.com
 spring.mail.port=25
-spring.mail.username=przychodniahealthcare@gmail.com
-spring.mail.password=mojehaslo1
+spring.mail.username=user #paste your user
+spring.mail.password=password  #paste your password
 spring.mail.properties.mail.debug=true
 spring.mail.properties.mail.transport.protocol=smtp
 spring.mail.properties.mail.smtp.auth=true
