refactor: phase 1 - switching to postgres and structure refactor

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,11 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/clinic?serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=password
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.show-sql = true
-hibernate.hbm2ddl.auto="create-drop"
-app.jwtSecret= securityKey
-app.jwtExpirationMs= 360000
-spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL5InnoDBDialect
+spring.datasource.url=jdbc:postgresql://localhost:5432/clinic
+spring.datasource.username=clm
+spring.datasource.password=clm
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.show-sql=true
+app.jwtSecret=securityKey
+app.jwtExpirationMs=360000
 debug=true
 spring.mail.host=smtp.gmail.com
 spring.mail.port=25
@@ -19,6 +17,7 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.connectiontimeout=100000
 spring.mail.properties.mail.smtp.timeout=100000
 spring.mail.properties.mail.smtp.writetimeout=100000
-spring.mail.properties.mail.smtp.ssl.trust= smtp.gmail.com
+spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
 spring.mail.properties.mail.smtp.starttls.enable=true
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
